@@ -1,6 +1,8 @@
 DIST drumkv1-0.3.2.tar.gz 126541 SHA256 54aa795af79e134bbc21b8b1ccd28ec1e13b4929ffc2f36a4b316f150d784e2d SHA512 4638612dd61e7c09282e054bf236d5e46690b3e69059d623cd2b294ba8fd4b527c9c27025dd14c9ce55d8fbd4694a4de2cec60df2439a0c69f436cd7f7d8b456 WHIRLPOOL 434e0c4a837fe15aec7f0d6c37fd31927e2940fa46a72a7fc4a38f7c1f16dfe148e4fe9dcadc6744c1f9001450ec1e7182b561e2f114ec8cd275dd9d1419d608
+DIST drumkv1-0.3.3.tar.gz 135246 SHA256 554270e967eb6f36fdd37efd4b7773216fa6cf1a5027749012d16b239d7fbdf5 SHA512 b92b5da3304d9367570a75baa64fa9538748f145aafa6bca3d2497a9a19e314189fefd62ae2d4d21c0a15356997de8b03cc4df16af9095febed203f24606f5e9 WHIRLPOOL 2ca122d448107f4c958e32a769cc3572d931ae85f403a0c67b2a4ec2e0d95a53f03710400f109595071695d34bc5914a35251311942dca8aafa54e00ee01129e
 EBUILD drumkv1-0.3.2-r1.ebuild 1585 SHA256 185cd0ec513b23d3b2aa5bda685170a3efd26d40eedd74ba14727ca97af526b5 SHA512 0e0942315a287f3437b5863f3c34dabe3c2192eb27057575bf80bced07dc5ae5dab28797dcce050bc3b94d8c600f9f9245c9432bbdc3a5baf479e091fd526f61 WHIRLPOOL d78132e040b417412982f1c6bc83dc38983236afbcce97822acbd23a44a865baab98808c027e1222913d4b9302a6701d1916f605c2bd1c56c64f465f89df5237
 EBUILD drumkv1-0.3.2.ebuild 1056 SHA256 7d43362a8e6f40a5d85fa1f4e52a9a4ed9ddea372d9e091e0cd7fa95fb028c14 SHA512 1e285c590eea3651ceaa6cc76f8347017f83a86f304290211e957b99d0300661360c3c276741e003f49cdb5e3615971dfdc9692d3c36e34e34895a86524a03dd WHIRLPOOL 53c7df9b4c3c0ec525d94b9d848b239f71104fae86a9c05f82e53224596c9ca36b27437daf5b40507031a83bbf007926255ab9f2654ed01760e550001e785643
+EBUILD drumkv1-0.3.3.ebuild 1636 SHA256 14e876dea11dd52f585ebf2c0c1ec6b5810b2e664f7165fe6ee840cd1013de40 SHA512 a0ad5905c68a7d12a1f96388e4e2f13a26054be4f7d471258d91352e89e0b8983e487ff555c7481530fb0231f79ac0f8ec82abbfa40563a74f375ab0847575fa WHIRLPOOL eaab85a3046b969788bf6f297209289ffde59292cbb3ecf10e27733ca86e0efa6a37b7b5386c46245602d40ad1dbf2a27ebf8e3e958202f88c4f4506ee2df094
 EBUILD drumkv1-9999.ebuild 1636 SHA256 14e876dea11dd52f585ebf2c0c1ec6b5810b2e664f7165fe6ee840cd1013de40 SHA512 a0ad5905c68a7d12a1f96388e4e2f13a26054be4f7d471258d91352e89e0b8983e487ff555c7481530fb0231f79ac0f8ec82abbfa40563a74f375ab0847575fa WHIRLPOOL eaab85a3046b969788bf6f297209289ffde59292cbb3ecf10e27733ca86e0efa6a37b7b5386c46245602d40ad1dbf2a27ebf8e3e958202f88c4f4506ee2df094
-MISC ChangeLog 1036 SHA256 caf434a6e69785f590e31a11ca0315d9f38d9058da780d5dd5206e87c84c0f67 SHA512 789c5c1162249fb0d247d99185924a561fb923fd7278af0b5d24a319be4e826d5994272ec2836ce5358eebe2a87a1e7176c045c8a0b97718032f286b019a8b05 WHIRLPOOL 63157bb6137cec36e2ce94383bee540794c23b4ea4aef82eb877bd38dfa22020d272221c483fad48e7371307ce259e53b603d15921471bb224dc85e39b368c03
+MISC ChangeLog 1173 SHA256 d865cc89d80e69427b6ef4bf66d623d18a395080788057cd558962d1b1bbe699 SHA512 da985437684f92c432ede7dc2e50b4aefb70dbe5785373e33866789b9c8245435f456948b9aebefc6c2fd96578c1619b000fe7f05bb40087302def1869219de8 WHIRLPOOL 1862d21f4152c4edaeb4f7e2b7d7a7ff387f4bc9f17378d30a28c1f8d6fbfe3a0c4936f99c4ea4fa26e7ff425684d87675df108069671fdfba2e55a8e30ba86b
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
