@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*drumkv1-0.3.3 (31 May 2013)
+
+  31 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  +drumkv1-0.3.3.ebuild:
+  Version bump.
+
 *drumkv1-0.3.2-r1 (05 May 2013)
 
   05 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
